Thu Jun 27 00:23:57 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_pow): Retry if y is a Bignum and it is
	  representable as a Fixnum.
	  Use rb_absint_numwords.

Wed Jun 26 23:53:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_save_rounding_mode): fix typo.
	  Fixes GH-343. Patch by @jgarber.

Wed Jun 26 23:22:21 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enumerator.c (rb_enumeratorize_with_size): use strict definition
	  rb_enumerator_size_func.

Wed Jun 26 23:11:14 2013  Kouhei Sutou  <kou@cozmixng.org>

	* gc.c (is_before_sweep): Add a missing space before a parenthesis.
	* gc.c (rb_gc_force_recycle): Add a missing space around a parenthesis.

Wed Jun 26 22:44:00 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_enumeratorize_with_size): cast for
	  backward compatibility.

	* include/ruby/intern.h (rb_enumerator_size_func): define strict
	  function declaration for rb_enumeratorize_with_size().

Wed Jun 26 21:01:22 2013  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* test/ruby/test_io.rb (TestIO#test_write_32bit_boundary): skip if
	  writing a file is slow.
	  [ruby-core:55541] [Bug #8519]

Wed Jun 26 16:42:11 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb: should use expanded values for header directories
	  unless extmk.  patch by vo.x (Vit Ondruch) at [ruby-core:55653]
	  [Bug #8115], rhbz#921650.

Wed Jun 26 12:48:22 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigxor_int): Fix a buffer over read.

Wed Jun 26 12:13:12 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigand_int): Consider negative values.
	  (bigor_int): The allocated bignum should have enough size
	  to store long.
	  This fixes (bignum fits in a BDIGIT) | (fixnum bigger than BDIGIT)
	  on platforms which SIZEOF_BDIGITS < SIZEOF_LONG,
	  such as LP64 with 32bit BDIGIT (no int128).

Wed Jun 26 12:08:51 2013  Tanaka Akira  <akr@fsij.org>
